[gd_scene load_steps=4 format=3 uid="uid://dtcrf8pnp1rga"]

[ext_resource type="Script" path="res://scenes/app.gd" id="1_xqpam"]

[sub_resource type="LabelSettings" id="LabelSettings_ydeo6"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_8sd7w"]
font_size = 32

[node name="App" type="CanvasLayer"]
script = ExtResource("1_xqpam")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Header" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CMD Weapon Designer"
label_settings = SubResource("LabelSettings_ydeo6")
horizontal_alignment = 1

[node name="PluginDirButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Set Plugin Directory
"
text_overrun_behavior = 3

[node name="DirInputBox" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="DirPathEdit" type="LineEdit" parent="CenterContainer/MarginContainer/VBoxContainer/DirInputBox"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter path to plugin dir"

[node name="Button" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/DirInputBox"]
layout_mode = 2
text = "Enter"

[node name="Spacer1" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameBox" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/NameBox"]
layout_mode = 2
text = "Weapon Name: "

[node name="NameEdit" type="LineEdit" parent="CenterContainer/MarginContainer/VBoxContainer/NameBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Weapon Name"

[node name="CategoryBox" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/CategoryBox"]
layout_mode = 2
text = "Category: "

[node name="CategoryMenu" type="MenuButton" parent="CenterContainer/MarginContainer/VBoxContainer/CategoryBox"]
layout_mode = 2
text = "Select Category"

[node name="RarityBox" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/RarityBox"]
layout_mode = 2
text = "Rarity: "

[node name="RarityMenu" type="MenuButton" parent="CenterContainer/MarginContainer/VBoxContainer/RarityBox"]
layout_mode = 2
text = "Select Rarity"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Behavior" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Behavior"
label_settings = SubResource("LabelSettings_8sd7w")
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionBehaviorTypeBox" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/ActionBehaviorTypeBox"]
layout_mode = 2
text = "Type: "

[node name="ActionBehaviorTypeMenu" type="MenuButton" parent="CenterContainer/MarginContainer/VBoxContainer/ActionBehaviorTypeBox"]
layout_mode = 2
text = "Select Type"

[node name="Spacer" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer/ActionBehaviorTypeBox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="EditActionBehaviorButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/ActionBehaviorTypeBox"]
layout_mode = 2
text = "Edit"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer4" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureBehavior" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Texture Behavior"
label_settings = SubResource("LabelSettings_8sd7w")
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureBehaviorTypeBox2" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TextureBehaviorTypeBox2"]
layout_mode = 2
text = "Type: "

[node name="TextureBehaviorTypeMenu" type="MenuButton" parent="CenterContainer/MarginContainer/VBoxContainer/TextureBehaviorTypeBox2"]
layout_mode = 2
text = "Select Type"

[node name="Spacer" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer/TextureBehaviorTypeBox2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="EditTextureBehaviorButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/TextureBehaviorTypeBox2"]
layout_mode = 2
text = "Edit"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer6" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ExportButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Export Weapon"

[node name="ExportDirInputBox" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ExportDirPathEdit" type="LineEdit" parent="CenterContainer/MarginContainer/VBoxContainer/ExportDirInputBox"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter path to plugin dir"

[node name="Button" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/ExportDirInputBox"]
layout_mode = 2
text = "Enter"

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/PluginDirButton" to="." method="_on_plugin_dir_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/DirInputBox/Button" to="." method="_on_enter_input_dir_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/ActionBehaviorTypeBox/EditActionBehaviorButton" to="." method="_on_edit_action_behavior_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/TextureBehaviorTypeBox2/EditTextureBehaviorButton" to="." method="_on_edit_texture_behavior_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/ExportDirInputBox/Button" to="." method="_on_export_dir_edit_enter_pressed"]
